@@ -3,8 +3,8 @@ package com.gtnewhorizons.galaxia.handlers;
 import static com.gtnewhorizons.galaxia.api.GalaxiaAPI.isInGalaxiaDimension;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.player.EntityPlayerMP;
@@ -12,17 +12,20 @@ import net.minecraft.server.MinecraftServer;
 
 import com.gtnewhorizons.galaxia.api.GalaxiaAPI;
 import com.gtnewhorizons.galaxia.core.Galaxia;
+import com.gtnewhorizons.galaxia.core.config.ConfigPlayer;
 import com.gtnewhorizons.galaxia.core.network.HazardWarningPacket;
+import com.gtnewhorizons.galaxia.registry.celestial.station.TileStation;
 import com.gtnewhorizons.galaxia.registry.dimension.SolarSystemRegistry;
 import com.gtnewhorizons.galaxia.registry.dimension.builder.EffectBuilder;
-import com.gtnewhorizons.galaxia.registry.hazards.EnvironmentalHazard;
 import com.gtnewhorizons.galaxia.registry.hazards.HazardOxygen;
 import com.gtnewhorizons.galaxia.registry.hazards.HazardPressure;
+import com.gtnewhorizons.galaxia.registry.hazards.HazardRadiation;
 import com.gtnewhorizons.galaxia.registry.hazards.HazardSpores;
 import com.gtnewhorizons.galaxia.registry.hazards.HazardTemperature;
 import com.gtnewhorizons.galaxia.registry.hazards.HazardWarnings;
 import com.gtnewhorizons.galaxia.registry.hazards.HazardWithering;
 import com.gtnewhorizons.galaxia.registry.hazards.HazardZeroG;
+import com.gtnewhorizons.galaxia.registry.interfaces.IEnvironmentalHazard;
 
 import cpw.mods.fml.common.eventhandler.SubscribeEvent;
 import cpw.mods.fml.common.gameevent.PlayerEvent;
@@ -37,17 +40,14 @@ public class DimensionEventHandler {
 
     private List<HazardWarnings> batchedWarnings;
 
-    private static final List<EnvironmentalHazard> ENVIRONMENTAL_HAZARDS;
-
-    static {
-        ENVIRONMENTAL_HAZARDS = Arrays.asList(
-            new HazardTemperature(),
-            new HazardSpores(),
-            new HazardOxygen(),
-            new HazardWithering(),
-            new HazardPressure(),
-            new HazardZeroG());
-    }
+    private static final List<IEnvironmentalHazard> ENVIRONMENTAL_HAZARDS = List.of(
+        new HazardTemperature(),
+        new HazardSpores(),
+        new HazardOxygen(),
+        new HazardWithering(),
+        new HazardPressure(),
+        new HazardZeroG(),
+        new HazardRadiation());
 
     public DimensionEventHandler() {
         this.counter = 0;
@@ -120,9 +120,27 @@ public class DimensionEventHandler {
      * @param player The player entity
      */
     private void applyEffects(EffectBuilder def, EntityPlayer player) {
+        if (player.capabilities.isCreativeMode && !ConfigPlayer.ConfigPlayerGlobal.applyDebuffsInCreative) {
+            if (!this.batchedWarnings.isEmpty()) {
+                this.batchedWarnings.clear();
+                // Clear warnings on the client
+                Galaxia.GALAXIA_NETWORK.sendTo(new HazardWarningPacket(this.batchedWarnings), (EntityPlayerMP) player);
+            }
+
+            return;
+        }
+
         this.batchedWarnings.clear();
-        for (EnvironmentalHazard h : ENVIRONMENTAL_HAZARDS) {
-            HazardWarnings w = h.applyTotal(def, player);
+
+        Optional<TileStation> station = Optional.ofNullable(
+            GalaxiaAPI.getStationAround(
+                player.worldObj,
+                player.dimension,
+                (int) player.posX,
+                (int) player.posY,
+                (int) player.posZ));
+        for (IEnvironmentalHazard h : ENVIRONMENTAL_HAZARDS) {
+            HazardWarnings w = h.apply(def, player, station);
             if (w != HazardWarnings.FINE) {
                 batchedWarnings.add(w);
             }
